--- a/AppSQlite/AppSQlite/MainPage.xaml
+++ b/AppSQlite/AppSQlite/MainPage.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppSQlite.MainPage" Title="Список друзей">
+             x:Class="AppSQlite.MainPage" Title="Университет">
     <StackLayout>
-        <Button Text="Friends" Clicked="ViewFriends" />
-        <!--<Button Text="Students" Clicked="ViewStudents" />-->
+      
         <Button Text="Teachers" Clicked="ViewTeachers" />
+        <Button Text="Students" Clicked="ViewStudents" />
     </StackLayout>
 </ContentPage>
