--- a/AppSQlite/AppSQlite/MainPage.xaml
+++ b/AppSQlite/AppSQlite/MainPage.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppSQlite.MainPage" Title="Университет">
+             x:Class="AppSQlite.MainPage" Title="УНИВЕРСИТЕТ">
     <StackLayout>
       
-        <Button Text="Teachers" Clicked="ViewTeachers" />
-        <Button Text="Students" Clicked="ViewStudents" />
+        <Button Text="Для перподавателей" Clicked="ViewTeachers" />
+        <Button Text="Для студентов" Clicked="ViewStudents" />
     </StackLayout>
 </ContentPage>
